--- a/pom.xml
+++ b/pom.xml
@@ -1172,7 +1172,15 @@ Bundle-DocURL:
         <scope>test</scope>
                     
       </dependency>
-              
+
+      <!-- Projectlombok -->
+      <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.12</version>
+        <scope>provided</scope>
+      </dependency>
+
     </dependencies>
         
   </dependencyManagement>
